--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -43,3 +43,8 @@
   picture: https://www.universiteitleiden.nl/en/ul2common/images/no-photo.jpg
   website: https://www.universiteitleiden.nl/en/staffmembers/serban-vadineanu#tab-1
 
+- name: Jiayang Shi
+  position: PhD Student
+  picture: https://www.universiteitleiden.nl/en/ul2common/images/no-photo.jpg
+  website: https://www.universiteitleiden.nl/en/staffmembers/jiayang-shi#tab-1
+
