--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -40,11 +40,11 @@
 
 - name: Serban Vadineanu
   position: PhD Student
-  picture: https://www.universiteitleiden.nl/en/ul2common/images/no-photo.jpg
+  picture: https://www.universiteitleiden.nl/binaries/content/gallery/ul2/main-images/science/liacs/serban-vadineanu.jpg/serban-vadineanu.jpg
   website: https://www.universiteitleiden.nl/en/staffmembers/serban-vadineanu#tab-1
 
 - name: Jiayang Shi
   position: PhD Student
-  picture: https://www.universiteitleiden.nl/en/ul2common/images/no-photo.jpg
+  picture: https://www.universiteitleiden.nl/binaries/content/gallery/ul2/main-images/science/liacs/jiayang-shi.jpg/jiayang-shi.jpg
   website: https://www.universiteitleiden.nl/en/staffmembers/jiayang-shi#tab-1
 
